[fix] contact form was cut off to the right

--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,9 @@ button,
     #contact-email,
     #contact-tel,
     #contact-message {
-        width: 2500%;
+        width: 2000%;
+    }
+
     .button-class {
         width: 100%;
     }
